<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/fondo_dialog"
    android:layout_gravity="center"
    android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tvEligeColor"
                android:layout_width="wrap_content"
                android:text="@string/elige_un_color"
                android:textStyle="bold"
                android:textColor="@color/blanco"
                android:paddingTop="25dp"
                android:textSize="18sp"
                android:layout_height="wrap_content">
            </TextView>
            <RadioGroup
                android:id="@+id/rgEligeColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/blanco"
                    android:checked="false"
                    android:textColor="@color/blanco"
                    app:buttonTint="@color/blanco">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/naranja"
                    android:checked="false"
                    android:textColor="@color/blanco"
                    app:buttonTint="@color/rojo">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/amarillo"
                    android:checked="false"
                    android:textColor="@color/blanco"
                    app:buttonTint="@color/naranja">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/verde"
                    android:checked="false"
                    android:textColor="@color/blanco"
                    app:buttonTint="@color/amarillo">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/cian"
                    android:checked="false"
                    android:textColor="@color/blanco"
                    app:buttonTint="@color/cian">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/azul"
                    android:checked="false"
                    android:textColor="@color/blanco"
                    app:buttonTint="@color/azul">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/violeta"
                    android:checked="false"
                    android:textColor="@color/blanco"
                    app:buttonTint="@color/violeta">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/gris"
                    android:checked="false"
                    android:textColor="@color/blanco"
                    app:buttonTint="@color/gris">
                </RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/negro"
                    android:checked="false"
                    android:textColor="@color/blanco"
                    app:buttonTint="@color/negro">
                </RadioButton>
                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_aplicarColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/morado_boton"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/aplicar_color"
                    app:cardCornerRadius="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:textSize="11sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/aplicar_color"
                        android:textColor="@color/blanco" />
                </androidx.cardview.widget.CardView>
            </RadioGroup>
        </LinearLayout>



</LinearLayout>