<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/fondo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/negro"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/blanco"
            android:clickable="true"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/blanco"
                android:textSize="15sp"
                android:padding="5dp"
                android:textAllCaps="true"
                android:gravity="center"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:clickable="true"
                android:background="@color/rojo">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rojo"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/blanco"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/naranja"
                        android:clickable="true"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/naranja"
                            android:padding="5dp"
                            android:textSize="15sp"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:textColor="@color/negro"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/amarillo"
                        android:clickable="true"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/amarillo"
                            android:padding="5dp"
                            android:textSize="15sp"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:textColor="@color/negro"
                            android:textStyle="bold">
                        </TextView>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/verde"
                    android:clickable="true"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/verde"
                        android:padding="5dp"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:textColor="@color/negro"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/material_dynamic_neutral30"
            android:layout_weight="3"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cian"
                    android:clickable="true"
                    android:layout_weight="2">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:text="@string/cian"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:textAllCaps="true">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/negro"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="@color/azul">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:text="@string/azul"
                            android:textColor="@color/blanco"
                            android:gravity="center"
                            android:textAllCaps="true">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:background="@color/violeta">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textStyle="bold"
                            android:padding="5dp"
                            android:textSize="15sp"
                            android:text="@string/violeta"
                            android:textColor="@color/blanco"
                            android:gravity="center"
                            android:textAllCaps="true">
                        </TextView>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/gris"
                        android:textAllCaps="true"
                        android:padding="5dp"
                        android:textColor="@color/blanco"
                        android:textSize="15sp"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@color/negro"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:layout_weight="2">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:textSize="15sp"
                        android:text="@string/negro"
                        android:textColor="@color/blanco"
                        android:gravity="center"
                        android:textAllCaps="true">
                    </TextView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>



</LinearLayout>